Overwriting datatables styling to fix pagination link spacing.

--- a/resources/assets/sass/layout/_base.scss
+++ b/resources/assets/sass/layout/_base.scss
@@ -184,3 +184,8 @@ tr th, tr td {
 .alert-dismissable .close {
     right: 0;
 }
+
+// Datatables
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding : 0;
+}
